Fix scrollbar issue caused by @angular/material touch area

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -122,3 +122,8 @@ body {
     margin-bottom: 1rem;
   }
 }
+
+// https://github.com/angular/components/issues/27118
+span.mat-mdc-button-touch-target {
+  height: unset !important;
+}
